Final Optimised Weather App

--- a/views/info.ejs
+++ b/views/info.ejs
@@ -35,9 +35,9 @@
                 <span>...</span>
               </div>
                  <% if (isDay) { %> 
-                      <img src="img/day_image.svg" alt="" class="card-img-top time" />
+                      <img src="img/day_image(1).svg" alt="" class="card-img-top time" />
                  <% } else{ %>     
-                       <img src="img/night_image.svg" alt="" class="card-img-top time" />
+                       <img src="img/night_image(1).svg" alt="" class="card-img-top time" />
                  <% } %> 
               </div>
         
@@ -71,11 +71,9 @@
                     </div>
                 </div>
     
-    
             </div>
 
         </div>
-        
 
     </div> 
   <% } %> 
